0031678: Visualization - text color becomes lighter than in 7.3.0

(cherry picked from commit 1855383438db33933106aa5848ac00569731a407)
(cherry picked from commit 90187b9476ae29750777d3099be5f4be62da80ab)
(cherry picked from commit 83e7b17fe1c27b231ee45ce30e0cdc2b1b62fa2f)